# fillnel

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
fillnel/: check_links_entry.py  cli.py  config.py  enrich_entry.py  feeds_entry.py  learn_entry.py  link_check_entry.py  main.py  profile_entry.py  rebuild_profile_entry.py
fillnel/services/: collector.py  embedding.py  gemini.py  profile.py  raindrop.py
fillnel/steps/: __init__.py  check_links.py  cleanup.py  collect.py  enrich.py  learn.py  link_check.py  rebuild_profile.py  register.py
scripts/: install-systemd.sh
services/: article-recommender.service  article-recommender.timer
tests/: test_collector.py  test_embedding.py  test_feeds_entry.py  test_gemini.py  test_profile.py  test_raindrop.py  test_steps.py
