[project]
name = "fillnel"
version = "0.1.0"
description = "Personal article recommender using Gemini and Raindrop.io"
authors = [
    {name = "nattoujam"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "google-genai (>=1.73.1,<2.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "rich (>=15.0.0,<16.0.0)"
]


[project.scripts]
fillnel = "fillnel.main:main"
fillnel-learn = "fillnel.learn_entry:main"
fillnel-profile = "fillnel.profile_entry:main"
fillnel-link-check = "fillnel.link_check_entry:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
